fix(frontend): increase visibility of text in click shield

--- a/frontend/src/components/markdown-renderer/replace-components/click-shield/click-shield.module.scss
+++ b/frontend/src/components/markdown-renderer/replace-components/click-shield/click-shield.module.scss
@@ -13,9 +13,8 @@
 
   .preview-hover {
     color: white;
-    opacity: 0.5;
-    transition: opacity 0.2s;
-    text-shadow: #000000 0 0 5px;
+    transition: text-shadow 0.2s;
+    text-shadow: #000000 0 0 5px, #000000 0 0 20px;
 
     display: flex;
     flex-direction: column;
@@ -23,17 +22,9 @@
     justify-content: center;
   }
 
-  .preview-hover-text {
-    opacity: 0;
-  }
-
   &:hover {
-    .preview-hover-text {
-      opacity: 1;
-    }
     .preview-hover {
-      opacity: 1;
-      text-shadow: #000000 0 0 5px, #000000 0 0 10px;
+      text-shadow: #000000 0 0 20px, #000000 0 0 40px;
     }
   }
 
@@ -43,6 +34,7 @@
     object-fit: cover;
     min-height: 300px;
     width: 100%;
+    opacity: 0.75;
 
     box-shadow: inset rgba(var(--bs-dark), 0.5) 0 0 20px;
   }
